# bingram

./: AUTHORS  COPYING  autobuild.sh  bingram.c  configure.ac
json/: autobuild.sh
src/: bingram.c  bingram.c.json  bingram.h  file.c.json  gram.c.json
test/: genranddatafile.sh  run_test.sh  test1.sh
test/t1/: input1
test/t3/: input1  input2
